--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,7 @@ authors before using.
 
 The main features of the package include:
 
-- **`fit_curve`** and **`add_growth_rate`**: fit a trend (poisson / negative
+- **`fit_curve`** and **`growth_rate`**: fit a trend (poisson / negative
   binomial) to an `incidence()` object and calculate the associated growth
   rate.
 
@@ -53,3 +53,38 @@ The main features of the package include:
 - **`estimate_peak()`**: uses bootstrap to estimate the peak time (and related
   confidence interval) of a partially observed outbreak. We can use **`tidy()`**
   to generate nicer looking output.
+
+
+## Installing the package
+
+Once it is released on [CRAN](https://CRAN.R-project.org), you will be able to
+install the stable version of the package with:
+
+```{r, eval=FALSE}
+install.packages("incidence2plus")
+```
+
+The development version can be installed from [GitHub](https://github.com/) 
+with:
+
+```{r, eval=FALSE}
+if (!require(remotes)) {
+  install.packages("remotes")
+}
+remotes::install_github("reconhub/incidence2plus", build_vignettes = TRUE)
+```
+
+# Resources
+
+## Vignettes
+
+An overview of *incidence2plus* is provided in the included vignettes:
+* `vignette("peak_estimation", package = "incidence2plus")`
+
+
+## Getting help online
+
+Bug reports and feature requests should be posted on *github* using the 
+[*issue* system](https://github.com/reconhub/incidence2plus/issues). All other 
+questions should be posted on the **RECON** slack channel see
+<https://www.repidemicsconsortium.org/forum/> for details on how to join.
