--- a/README.Rmd
+++ b/README.Rmd
@@ -39,19 +39,19 @@ authors before using.
 
 The main features of the package include:
 
-- [fit_curve()] and [growth_rate](): fit a trend (poisson / negative
+- `fit_curve()` and `growth_rate()`: fit a trend (poisson / negative
   binomial) to an `incidence2` object and calculate the associated growth
   rate.
 
-- [add_rolling_average()]: add a rolling average to an `incidence2` object.
-  
-- [bootstrap()]: generates a bootstrapped `incidence2` object by re-sampling,
+- `add_rolling_average()`: add a rolling average to an `incidence2` object.
+
+- `bootstrap()`: generates a bootstrapped `incidence2` object by re-sampling,
   with replacement, the original dates of events.
 
-- [find_peak()]: locates the peak time of the epicurve.
+- `find_peak()`: locates the peak time of the epicurve.
 
-- [estimate_peak()]: uses bootstrap to estimate the peak time (and related
-  confidence interval) of a partially observed outbreak. We can use [tidy()]
+- `estimate_peak()`: uses bootstrap to estimate the peak time (and related
+  confidence interval) of a partially observed outbreak. We can use `tidy()`
   to generate nicer looking output.
 
 
@@ -79,7 +79,9 @@ remotes::install_github("reconhub/incidence2plus", build_vignettes = TRUE)
 ## Vignettes
 
 An overview of *incidence2plus* is provided in the included vignettes:
+
 * `vignette("peak_estimation", package = "incidence2plus")`
+
 * `vignette("fitting_epicurves", package = "incidence2plus")`
 
 
