--- a/vignettes/peak_estimation.Rmd
+++ b/vignettes/peak_estimation.Rmd
@@ -58,9 +58,6 @@ the following assumptions:
 - the reporting is assumed to be constant over time, i.e. every case is
   equally likely to be reported.
 
-Also note that `estimate_peak()` will always returns a list but is compatible
-with `broom::tidy()` :
-  
 ```{r estimatepeak}
 dat <- fluH7N9_china_2013
 x <- incidence(dat, date_index = date_of_onset, groups = province)
@@ -68,6 +65,6 @@ x <- incidence(dat, date_index = date_of_onset, groups = province)
 # regrouping for overall peak
 x %>% regroup() %>% estimate_peak()
 
-# across provinces (with progress bar suppressed and tidy output)
-x %>% estimate_peak(progress = FALSE) %>% tidy()
+# across provinces and with progress bar suppressed
+x %>% estimate_peak(progress = FALSE)
 ```
