--- a/README.Rmd
+++ b/README.Rmd
@@ -18,9 +18,9 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
-[![CRAN status](https://www.r-pkg.org/badges/version/incidence2)](https://CRAN.R-project.org/package=incidence2plus)
-[![R build status](https://github.com/reconhub/incidence2plus/workflows/R-CMD-check/badge.svg)](https://github.com/reconhub/incidence2plus/actions)
-[![Codecov test coverage](https://codecov.io/gh/reconhub/incidence2plus/branch/master/graph/badge.svg)](https://codecov.io/gh/reconhub/incidence2plus?branch=master)
+[![CRAN status](https://www.r-pkg.org/badges/version/incidence2)](https://CRAN.R-project.org/package=i2extras)
+[![R build status](https://github.com/reconhub/i2extras/workflows/R-CMD-check/badge.svg)](https://github.com/reconhub/i2extras/actions)
+[![Codecov test coverage](https://codecov.io/gh/reconhub/i2extras/branch/master/graph/badge.svg)](https://codecov.io/gh/reconhub/i2extras?branch=master)
 <!-- badges: end -->
 
 <br>
@@ -32,7 +32,7 @@ authors before using.
 
 # Scope
 
-*incidence2plus* adds additional functionality to the
+*i2extras* adds additional functionality to the
 [incidence2](https://github.com/reconhub/incidence2) package.
 
 # What does it do?
@@ -61,7 +61,7 @@ Once it is released on [CRAN](https://CRAN.R-project.org), you will be able to
 install the stable version of the package with:
 
 ```{r, eval=FALSE}
-install.packages("incidence2plus")
+install.packages("i2extras")
 ```
 
 The development version can be installed from [GitHub](https://github.com/) 
@@ -71,23 +71,23 @@ with:
 if (!require(remotes)) {
   install.packages("remotes")
 }
-remotes::install_github("reconhub/incidence2plus", build_vignettes = TRUE)
+remotes::install_github("reconhub/i2extras", build_vignettes = TRUE)
 ```
 
 # Resources
 
 ## Vignettes
 
-An overview of *incidence2plus* is provided in the included vignettes:
+An overview of *i2extras* is provided in the included vignettes:
 
-* `vignette("peak_estimation", package = "incidence2plus")`
+* `vignette("peak_estimation", package = "i2extras")`
 
-* `vignette("fitting_epicurves", package = "incidence2plus")`
+* `vignette("fitting_epicurves", package = "i2extras")`
 
 
 ## Getting help online
 
 Bug reports and feature requests should be posted on *github* using the 
-[*issue* system](https://github.com/reconhub/incidence2plus/issues). All other 
+[*issue* system](https://github.com/reconhub/i2extras/issues). All other 
 questions should be posted on the **RECON** slack channel see
 <https://www.repidemicsconsortium.org/forum/> for details on how to join.
