--- a/vignettes/fitting_epicurves.Rmd
+++ b/vignettes/fitting_epicurves.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 ```
 
 # Example
-To illustrate the trend fitting functionality of *incidence2plus* we will use
+To illustrate the trend fitting functionality of *i2extras* we will use
 the simulated Ebola Virus Disease (EVD) outbreak data from the
 [outbreaks](https://CRAN.R-project.org/package=outbreaks) package.
 
@@ -27,8 +27,7 @@ the simulated Ebola Virus Disease (EVD) outbreak data from the
 ```{r}
 library(outbreaks)
 library(incidence2)
-library(incidence2plus)
-library(tidyr)
+library(i2extras)
 
 raw_dat <- ebola_sim_clean$linelist
 ```
@@ -46,9 +45,9 @@ plot(dat)
 ```
 
 ## Modeling incidence
-We can use `fit_curve()` to fit the data with either a poisson or 
+We can use [fit_curve()] to fit the data with either a poisson or 
 negative binomial regression model.  The output from this will be a nested
-object with class [incidence2_fit] which as methods available for both 
+object with class [`incidence2_fit`] which has methods available for both 
 automatic plotting and the calculation of growth (decay) rates and doubling
 (halving) times.
 
@@ -59,7 +58,17 @@ out %>% plot()
 out %>% growth_rate()
 ```
 
-`fit_curve` will also work on grouped incidence objects:
+To unnest the data we can use [unnest()] (a function that has been reexported
+from the [tidyr](https://cran.r-project.org/package=tidyr) package.
+
+```{r}
+out %>% unnest(estimates)
+```
+
+[fit_curve()] also works nicely with grouped `incidence2` objects.  In this
+situation, we return a nested tibble with some additional columns that 
+indicate whether there has been a warning or error during the fitting
+or prediction stages.
 
 ```{r}
 grouped_dat <- incidence(
@@ -67,7 +76,7 @@ grouped_dat <- incidence(
     date_index = date_of_onset,
     interval = 7,
     groups = hospital
-)[1:140, ]
+)[1:120, ]
 grouped_dat
 
 out <- fit_curve(grouped_dat, model = "poisson", alpha = 0.05)
@@ -75,6 +84,16 @@ out
 out %>% plot(pi=TRUE)
 out %>% growth_rate()
 ```
+
+We provide helper functions, [is_ok()], [is_warning()] and [is_error()]  to
+help filter the output as necessary.
+
+```{r}
+out <- fit_curve(grouped_dat, model = "negbin", alpha = 0.05)
+out %>% is_warning()
+out %>% is_warning() %>% unnest(fitting_warning)
+```
+
 
 ## Rolling average
 We can add a rolling average, across current and previous intervals, to
