--- a/vignettes/fitting_epicurves.Rmd
+++ b/vignettes/fitting_epicurves.Rmd
@@ -45,9 +45,9 @@ plot(dat)
 ```
 
 ## Modeling incidence
-We can use [fit_curve()] to fit the data with either a poisson or 
+We can use `fit_curve()` to fit the data with either a poisson or 
 negative binomial regression model.  The output from this will be a nested
-object with class [`incidence2_fit`] which has methods available for both 
+object with class `incidence2_fit` which has methods available for both 
 automatic plotting and the calculation of growth (decay) rates and doubling
 (halving) times.
 
@@ -58,14 +58,14 @@ out %>% plot()
 out %>% growth_rate()
 ```
 
-To unnest the data we can use [unnest()] (a function that has been reexported
+To unnest the data we can use `unnest()` (a function that has been reexported
 from the [tidyr](https://cran.r-project.org/package=tidyr) package.
 
 ```{r}
 out %>% unnest(estimates)
 ```
 
-[fit_curve()] also works nicely with grouped `incidence2` objects.  In this
+`fit_curve()` also works nicely with grouped `incidence2` objects.  In this
 situation, we return a nested tibble with some additional columns that 
 indicate whether there has been a warning or error during the fitting
 or prediction stages.
@@ -81,11 +81,13 @@ grouped_dat
 
 out <- fit_curve(grouped_dat, model = "poisson", alpha = 0.05)
 out
-out %>% plot(pi=TRUE)
+
+# plot with a prediction interval but not a confidence interval
+out %>% plot(ci = FALSE, pi=TRUE)
 out %>% growth_rate()
 ```
 
-We provide helper functions, [is_ok()], [is_warning()] and [is_error()]  to
+We provide helper functions, `is_ok()`, `is_warning()` and `is_error()` to
 help filter the output as necessary.
 
 ```{r}
