--- a/vignettes/peak_estimation.Rmd
+++ b/vignettes/peak_estimation.Rmd
@@ -43,10 +43,10 @@ dat <- fluH7N9_china_2013
 x <- incidence(dat, date_index = date_of_onset, groups = gender)
 
 # peaks across each group
-x %>% find_peak(regroup = FALSE)
+find_peak(x)
 
 # peak without groupings
-x %>% find_peak()
+find_peak(regroup(x))
 ```
 
 ## `estimate_peak()`
@@ -63,8 +63,8 @@ dat <- fluH7N9_china_2013
 x <- incidence(dat, date_index = date_of_onset, groups = province)
 
 # regrouping for overall peak
-x %>% regroup() %>% estimate_peak()
+estimate_peak(regroup(x))
 
 # across provinces and with progress bar suppressed
-x %>% estimate_peak(progress = FALSE)
+estimate_peak(x, progress = FALSE)
 ```
