--- a/vignettes/peak_estimation.Rmd
+++ b/vignettes/peak_estimation.Rmd
@@ -62,9 +62,9 @@ the following assumptions:
 dat <- fluH7N9_china_2013
 x <- incidence(dat, date_index = date_of_onset, groups = province)
 
-# regrouping for overall peak
-estimate_peak(regroup(x))
+# regrouping for overall peak (we suspend progress bar for markdown)
+estimate_peak(regroup(x), progress = FALSE)
 
-# across provinces and with progress bar suppressed
+# across provinces
 estimate_peak(x, progress = FALSE)
 ```
