--- a/vignettes/fitting_epicurves.Rmd
+++ b/vignettes/fitting_epicurves.Rmd
@@ -26,8 +26,8 @@ the simulated Ebola Virus Disease (EVD) outbreak data from the
 ## Loading relevant packages and data
 ```{r}
 library(outbreaks)
-library(incidence2)
 library(i2extras)
+library(ggplot2)
 
 raw_dat <- ebola_sim_clean$linelist
 ```
@@ -37,11 +37,12 @@ For this example we will restrict ourselves to the first 20 weeks of data:
 ```{r}
 dat <- incidence(
     raw_dat, 
-    date_index = date_of_onset,
-    interval = "week"
+    date_index = "date_of_onset",
+    interval = "week",
+    groups = "gender"
 )[1:20, ]
 dat
-plot(dat)
+plot(dat, angle = 45, border_colour = "white")
 ```
 
 ## Modeling incidence
@@ -54,7 +55,7 @@ automatic plotting and the calculation of growth (decay) rates and doubling
 ```{r}
 out <- fit_curve(dat, model = "poisson", alpha = 0.05)
 out
-plot(out)
+plot(out, angle = 45, border_colour = "white")
 growth_rate(out)
 ```
 
@@ -73,9 +74,9 @@ or prediction stages.
 ```{r}
 grouped_dat <- incidence(
     raw_dat, 
-    date_index = date_of_onset,
+    date_index = "date_of_onset",
     interval = "week",
-    groups = hospital
+    groups = "hospital"
 )[1:120, ]
 grouped_dat
 
@@ -83,7 +84,7 @@ out <- fit_curve(grouped_dat, model = "poisson", alpha = 0.05)
 out
 
 # plot with a prediction interval but not a confidence interval
-plot(out, ci = FALSE, pi=TRUE)
+plot(out, ci = FALSE, pi=TRUE, angle = 45, border_colour = "white")
 growth_rate(out)
 ```
 
@@ -102,9 +103,7 @@ We can add a rolling average, across current and previous intervals, to
 an `incidence2` object with the `add_rolling_average()` function:
 
 ```{r rolling_average}
-ra <- add_rolling_average(grouped_dat, before = 2) # group observations with the 2 prior
-ra
-unnest(ra, rolling_average)
-
-plot(ra, color = "white")
+ra <- add_rolling_average(grouped_dat, n = 2L) # group observations with the 2 prior
+plot(ra, border_colour = "white", angle = 45) +
+    geom_line(aes(x = date_index, y = rolling_average))
 ```
