--- a/vignettes/peak_estimation.Rmd
+++ b/vignettes/peak_estimation.Rmd
@@ -33,14 +33,14 @@ around a peak.
 ## `bootstrap()`
 ```{r bootstrap}
 dat <- fluH7N9_china_2013
-x <- incidence(dat, date_index = date_of_onset, groups = gender)
+x <- incidence(dat, date_index = "date_of_onset", groups = "gender")
 bootstrap(x)
 ```
 
 ## `find_peak()`
 ```{r findpeak}
 dat <- fluH7N9_china_2013
-x <- incidence(dat, date_index = date_of_onset, groups = gender)
+x <- incidence(dat, date_index = "date_of_onset", groups = "gender")
 
 # peaks across each group
 find_peak(x)
@@ -60,7 +60,7 @@ the following assumptions:
 
 ```{r estimatepeak}
 dat <- fluH7N9_china_2013
-x <- incidence(dat, date_index = date_of_onset, groups = province)
+x <- incidence(dat, date_index = "date_of_onset", groups = "province")
 
 # regrouping for overall peak (we suspend progress bar for markdown)
 estimate_peak(regroup(x), progress = FALSE)
