--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/incidence2)](https://CRAN.R-project.org/package=i2extras)
 [![R build status](https://github.com/reconverse/i2extras/workflows/R-CMD-check/badge.svg)](https://github.com/reconverse/i2extras/actions)
-[![Codecov test coverage](https://codecov.io/gh/reconverse/i2extras/branch/master/graph/badge.svg)](https://codecov.io/gh/reconverse/i2extras?branch=master)
+[![Codecov test coverage](https://codecov.io/gh/reconverse/i2extras/branch/master/graph/badge.svg)](https://app.codecov.io/gh/reconverse/i2extras?branch=master)
 [![](https://raw.githubusercontent.com/reconverse/reconverse.github.io/master/images/badge-maturing.svg)](https://www.reconverse.org/lifecycle.html#maturing)
 <!-- badges: end -->
 
@@ -49,22 +49,18 @@ The main features of the package include:
 
 ## Installing the package
 
-Once it is released on [CRAN](https://CRAN.R-project.org), you will be able to
-install the stable version of the package with:
+You can install the released version of {i2extras} from [CRAN](https://cran.r-project.org/) with:
 
 ```{r, eval=FALSE}
 install.packages("i2extras")
 ```
 
-The development version can be installed from [GitHub](https://github.com/) 
-with:
-
+::: {.pkgdown-devel}
+The development version of {i2extras} can be installed from GitHub with:
 ```{r, eval=FALSE}
-if (!require(remotes)) {
-  install.packages("remotes")
-}
 remotes::install_github("reconverse/i2extras", build_vignettes = TRUE)
 ```
+:::
 
 # Resources
 
